// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell render Empty Cell 1`] = `
.emotion-0 {
  background-color: white;
  border: 1px solid lightgray;
  width: 20px;
  height: 20px;
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
}

<div
  className="emotion-0"
  onClick={[Function]}
/>
`;

exports[`Cell render Living Cell 1`] = `
.emotion-0 {
  background-color: lawngreen;
  border: 1px solid lightgray;
  width: 20px;
  height: 20px;
}

<div
  className="emotion-0"
  onClick={[Function]}
/>
`;
